# dd-embed

./: README.md  pyproject.toml
cookbook/basic-embeddings/: README.md  main.py  requirements.txt
cookbook/embedding-cache-demo/: README.md  main.py
cookbook/semantic-similarity/: README.md  main.py
dd_embed/: __init__.py  _builtins.py  base.py  cache.py  registry.py
dd_embed/adapters/: __init__.py  gemini_embed.py  huggingface.py  ollama_embed.py  openai_embed.py  sentence_transformer.py  voyage_embed.py
tests/: test_adapters.py  test_base.py  test_cache.py  test_registry.py
